# dnd

./: CHANGELOG.md  Cargo.toml  Justfile  README.md
.config/: nextest.toml
.github/workflows/: deploy.yml
src/: core.rs  lib.rs
src/core/: abilities.rs  ability.rs  ability_modifier.rs  ability_score.rs  level.rs  proficiency_bonus.rs  skill.rs  skill_proficiencies.rs
