[package]
name = "dnd"
edition = "2024"
license = "MIT"

description = "D&D 5e types and common mechanics"
repository = "https://github.com//dnd"
version = "0.0.0-reserved"

[lints.clippy]
pedantic = "deny"

[workspace]
members = ["tools/cargo-bin"]

[workspace.metadata.bin]
cargo-nextest = { version = "0.9.98", locked = true }
cargo-llvm-cov = { version = "0.6.16", locked = true }
just = { version = "1.40.0" }
taplo-cli = { version = "0.10.0", bins = ["taplo"] }

[features]
default = ["std"]
std = ["serde/std"]
serde = ["serde/derive"]

[dependencies]
serde = { version = "1.0.219", default-features = false, features = [
  "derive",
], optional = true }

[dev-dependencies]
serde_json = "1.0.140"
